<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondFragment">


    <Button
        android:id="@+id/showToastBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_button" />

    <Button
        android:id="@+id/showDialogBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_dialog_button" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button" />
</LinearLayout>
