<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/countUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/counter_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/nextScreenBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nextscreen_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
